--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "awcodes/overlook": "^2.2",
         "filament/filament": "^3.2",
+        "laravel/cashier": "^15.3",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9"
     },
